@@ -70,6 +70,7 @@ static NO_COPY struct
   X (EA_TABLE_FULL,		ENOSPC),
   X (END_OF_MEDIA,		ENOSPC),
   X (EOM_OVERFLOW,		EIO),
+  X (EXE_MACHINE_TYPE_MISMATCH,	ENOEXEC),
   X (EXE_MARKED_INVALID,	ENOEXEC),
   X (FILEMARK_DETECTED,		EIO),
   X (FILENAME_EXCED_RANGE,	ENAMETOOLONG),
@@ -93,6 +94,7 @@ static NO_COPY struct
   X (INVALID_SIGNAL_NUMBER,	EINVAL),
   X (IOPL_NOT_ENABLED,		ENOEXEC),
   X (IO_DEVICE,			EIO),
+  X (IO_INCOMPLETE,		EAGAIN),
   X (IO_PENDING,		EAGAIN),
   X (LOCK_VIOLATION,		EACCES),
   X (MAX_THRDS_REACHED,		EAGAIN),
@@ -102,8 +104,8 @@ static NO_COPY struct
   X (NEGATIVE_SEEK,		EINVAL),
   X (NETNAME_DELETED,		ENOENT),
   X (NOACCESS,			EFAULT),
-  X (NONPAGED_SYSTEM_RESOURCES,	EAGAIN),
   X (NONE_MAPPED,		EINVAL),
+  X (NONPAGED_SYSTEM_RESOURCES,	EAGAIN),
   X (NOT_CONNECTED,		ENOLINK),
   X (NOT_ENOUGH_MEMORY,		ENOMEM),
   X (NOT_OWNER,			EPERM),
@@ -134,6 +136,8 @@ static NO_COPY struct
   X (PROCESS_ABORTED,		EFAULT),
   X (PROC_NOT_FOUND,		ESRCH),
   X (REM_NOT_LIST,		ENONET),
+  X (SECTOR_NOT_FOUND,		EINVAL),
+  X (SEEK,			EINVAL),
   X (SETMARK_DETECTED,		EIO),
   X (SHARING_BUFFER_EXCEEDED,	ENOLCK),
   X (SHARING_VIOLATION,		EBUSY),
@@ -145,9 +149,6 @@ static NO_COPY struct
   X (WAIT_NO_CHILDREN,		ECHILD),
   X (WORKING_SET_QUOTA,		EAGAIN),
   X (WRITE_PROTECT,		EROFS),
-  X (SEEK,			EINVAL),
-  X (SECTOR_NOT_FOUND,		EINVAL),
-  X (IO_INCOMPLETE,		EAGAIN),
   { 0, NULL, 0}
 };
 
